--- a/+not-found.html
+++ b/+not-found.html
@@ -1,4 +1,14 @@
-<!DOCTYPE html><html  lang="en"><head><title data-rh="true"></title><meta charSet="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/><style id="expo-reset">#root,body,html{height:100%}body{overflow:hidden}#root{display:flex}</style><style>
+<!DOCTYPE html><html  lang="en"><head><title data-rh="true"></title><meta charSet="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/><script>
+if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js').then(registration => {
+            console.log('Service Worker registered with scope:', registration.scope);
+        }).catch(error => {
+            console.error('Service Worker registration failed:', error);
+        });
+    });
+}
+</script><link rel="manifest" href="/manifest.json"/><style id="expo-reset">#root,body,html{height:100%}body{overflow:hidden}#root{display:flex}</style><style>
 body {
   background-color: #fff;
 }
@@ -469,5 +479,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><style id="expo-generated-fonts" type="text/css">@font-face{font-family:MouldyCheese;src:url(/tenzies-expo/assets/assets/Fonts/MouldyCheeseRegular.cd326d2727b3e416769875d48e7a3ced.ttf?platform=web&hash=cd326d2727b3e416769875d48e7a3ced);font-display:auto}</style><link rel="preload" href="/tenzies-expo/assets/assets/Fonts/MouldyCheeseRegular.cd326d2727b3e416769875d48e7a3ced.ttf?platform=web&hash=cd326d2727b3e416769875d48e7a3ced" as="font" crossorigin="" /><link rel="shortcut icon" href="/tenzies-expo/favicon.ico" /></head><body><div id="root"><div class="css-175oi2r r-13awgt0"><!--$--><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0 r-12vffkv"><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0 r-1d5kdc7 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(242,242,242,1.00);display:flex"><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0"><!--$--><!--/$--></div></div></div></div></div></div></div><!--/$--></div></div><script src="/tenzies-expo/_expo/static/js/web/entry-f1bd6073873cdb438668c2896d7db068.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><style id="expo-generated-fonts" type="text/css">@font-face{font-family:MouldyCheese;src:url(/assets/assets/Fonts/MouldyCheeseRegular.cd326d2727b3e416769875d48e7a3ced.ttf?platform=web&hash=cd326d2727b3e416769875d48e7a3ced);font-display:auto}</style><link rel="preload" href="/assets/assets/Fonts/MouldyCheeseRegular.cd326d2727b3e416769875d48e7a3ced.ttf?platform=web&hash=cd326d2727b3e416769875d48e7a3ced" as="font" crossorigin="" /><link rel="shortcut icon" href="/favicon.ico" /></head><body><div id="root"><div class="css-175oi2r r-13awgt0"><!--$--><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0 r-12vffkv"><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0 r-1d5kdc7 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(242,242,242,1.00);display:flex"><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0"><!--$--><!--/$--></div></div></div></div></div></div></div><!--/$--></div></div><script src="/_expo/static/js/web/entry-1041ad905656c2d30f4fb1654773f584.js" defer></script>
 </body></html>
