--- a/_sitemap.html
+++ b/_sitemap.html
@@ -8,7 +8,7 @@ if ('serviceWorker' in navigator) {
         });
     });
 }
-</script><link rel="manifest" href="/manifest.json"/><style id="expo-reset">#root,body,html{height:100%}body{overflow:hidden}#root{display:flex}</style><style>
+</script><link rel="manifest" href="/tenzies-expo/manifest.json"/><style id="expo-reset">#root,body,html{height:100%}body{overflow:hidden}#root{display:flex}</style><style>
 body {
   background-color: #fff;
 }
