--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-10x49cs{font-size:10px;}
 .r-10xqauy{padding-top:env(safe-area-inset-top);}
 .r-116b19x{padding-left:40px;}
+.r-11afghs{background-color:rgba(241,194,50,1.00);}
 .r-11g3r6m{padding-right:24px;}
 .r-11j9u27{visibility:hidden;}
 .r-11mpjr4{background-color:rgba(223,223,223,1.00);}
@@ -432,5 +433,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><style id="expo-generated-fonts" type="text/css">@font-face{font-family:MouldyCheese;src:url(/tenzies-expo/assets/assets/Fonts/MouldyCheeseRegular.cd326d2727b3e416769875d48e7a3ced.ttf?platform=web&hash=cd326d2727b3e416769875d48e7a3ced);font-display:auto}</style><link rel="preload" href="/tenzies-expo/assets/assets/Fonts/MouldyCheeseRegular.cd326d2727b3e416769875d48e7a3ced.ttf?platform=web&hash=cd326d2727b3e416769875d48e7a3ced" as="font" crossorigin="" /><link rel="shortcut icon" href="/tenzies-expo/favicon.ico" /></head><body><div id="root"><div class="css-175oi2r r-13awgt0"><!--$--><div class="css-175oi2r" style="flex:1;background-color:rgba(241,194,50,1.00)"><div class="css-175oi2r r-1mlwlqe r-1udh08x r-417010" style="height:100%;width:100%"><div class="css-175oi2r r-1niwhzg r-vvn4in r-u6sd8q r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw r-ehq7j7"></div></div></div><!--/$--></div></div><script src="/tenzies-expo/_expo/static/js/web/entry-c51d758ad8fb9510c252d10c0d34dc02.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><style id="expo-generated-fonts" type="text/css">@font-face{font-family:MouldyCheese;src:url(/tenzies-expo/assets/assets/Fonts/MouldyCheeseRegular.cd326d2727b3e416769875d48e7a3ced.ttf?platform=web&hash=cd326d2727b3e416769875d48e7a3ced);font-display:auto}</style><link rel="preload" href="/tenzies-expo/assets/assets/Fonts/MouldyCheeseRegular.cd326d2727b3e416769875d48e7a3ced.ttf?platform=web&hash=cd326d2727b3e416769875d48e7a3ced" as="font" crossorigin="" /><link rel="shortcut icon" href="/tenzies-expo/favicon.ico" /></head><body><div id="root"><div class="css-175oi2r r-13awgt0"><!--$--><div class="css-175oi2r r-11afghs r-13awgt0"><div class="css-175oi2r r-1mlwlqe r-1udh08x r-417010 r-1pi2tsx r-13qz1uu"><div class="css-175oi2r r-1niwhzg r-vvn4in r-u6sd8q r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw r-ehq7j7"></div></div></div><!--/$--></div></div><script src="/tenzies-expo/_expo/static/js/web/entry-35bf0d06913c86eb297585b96e24df73.js" defer></script>
 </body></html>
