--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         flex: 1;
       }
     </style>
-    <link rel="icon" href="tenzies-expo/favicon.ico" />
+    <link rel="icon" href="/tenzies-expo/favicon.ico" />
   </head>
 
   <body>
@@ -35,7 +35,7 @@
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
     <script
-      src="tenzies-expo/_expo/static/js/web/entry-4c469f5771c2e98cd020b19b1d2bc18d.js"
+      src="/tenzies-expo/_expo/static/js/web/entry-4c469f5771c2e98cd020b19b1d2bc18d.js"
       defer
     ></script>
   </body>
