--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>tenzies-expo</title>
     <!-- The `react-native-web` recommended style reset: https://necolas.github.io/react-native-web/docs/setup/#root-element -->
     <style id="expo-reset">
@@ -26,17 +23,15 @@
         flex: 1;
       }
     </style>
-    <link rel="icon" href="/tenzies-expo/favicon.ico" />
-  </head>
+  <link rel="icon" href="/tenzies-expo/favicon.ico" /></head>
 
   <body>
     <!-- Use static rendering with Expo Router to support running without JavaScript. -->
-    <noscript> You need to enable JavaScript to run this app. </noscript>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-    <script
-      src="/tenzies-expo/_expo/static/js/web/entry-4c469f5771c2e98cd020b19b1d2bc18d.js"
-      defer
-    ></script>
-  </body>
+  <script src="/tenzies-expo/_expo/static/js/web/entry-66373aa51c26ff0c5280940316aaa8fa.js" defer></script>
+</body>
 </html>
